margin and padding

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     <h2>HTML</h2>
     <p class="author">James Band</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, explicabo.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam quas temporibus ab nostrum vel, itaque est
+    <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam quas temporibus ab nostrum vel,
+      itaque est
       ducimus sapiente mollitia repudiandae?</p>
   </article>
 
