display inline block

--- a/inline-block.html
+++ b/inline-block.html
@@ -9,6 +9,19 @@
 </head>
 
 <body>
+  <!-- header -->
+  <header>
+    <a href="#" class="logo">Logo</a>
+    <nav>
+      <ul class="nav-ul">
+        <li class="nav-li"><a class="nav-item" href="#">Home</a></li>
+        <li class="nav-li"><a class="nav-item" href="#">About</a></li>
+        <li class="nav-li"><a class="nav-item" href="#">Contact us</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <!-- header -->
   <h1>Inline Block</h1>
   <div class="inline-els">
     <h2>Inline elements</h2>
