--- a/inline-block.html
+++ b/inline-block.html
@@ -47,6 +47,9 @@
     <div class="left bd-1">i am left</div>
     <div class="right bd-1">i am right</div>
   </div>
+  <div>
+    <h2>OKKKK</h2>
+  </div>
 </body>
 
 </html>
